Bug 161911 - Impress comment indicator style has changed
Summary: Impress comment indicator style has changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-07-05 11:47 UTC by Buovjaga
Modified: 2024-10-08 14:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-07-05 11:47:56 UTC
Indicators used to be numbers inside rectangles, placed inside the slide area at the top. Now the rectangles are gone and they are overlaid on the top edge of the slide.

For testers looking to quickly check, see attachment 193886 [details].

This has changed sometime after 17 June as that is the newest commit in Linux 24.8 bibisect repo at the moment and this issue can be seen on master (on Linux and Windows).

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4e97c21ab32f3e6f28a842ad14bad41f00fefda5
CPU threads: 8; OS: Linux 6.9; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Rafael Lima 2024-07-05 12:56:29 UTC
This is a mess in 25.2.

For me only numbers appear (no rectangle). When you click the number, comment opens; but clicking outside the comment won't close it.

Works fine in 24.2.

Repro with (build from yesterday):

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 487def89c24c28da600ab8813949ceca2555e0c6
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 2 Buovjaga 2024-07-05 14:11:20 UTC
(In reply to Rafael Lima from comment #1)
> This is a mess in 25.2.
> 
> For me only numbers appear (no rectangle). When you click the number,
> comment opens; but clicking outside the comment won't close it.

Yes, an additional glitch with kf6 is that if you click the dropdown button in bottom right, the comment closes. If it's needed I can report it separately, but I planned to wait and see.
Comment 3 raal 2024-07-06 07:15:58 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 809e3181036646fd9070c407949ce26675b2e961 is the first bad commit
commit 809e3181036646fd9070c407949ce26675b2e961
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue Jun 18 18:50:20 2024 +0200

    source e17c56bfc7930d3c14c3ff4cfd59828e8dcc0229
168485: annot: new Annotation sdr object, replacing annotation tags | https://gerrit.libreoffice.org/c/core/+/168485
Comment 4 Commit Notification 2024-07-11 06:35:21 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b547e9f19de339531709c14931998125b9a41649

tdf#161911 annot: fix for annotation with 0 size

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.